ops/deploy/production/nginx/abrepo-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abrepo-nginx-ingress
  namespace: abrepo
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-abrepo-issuer
    traefik.ingress.kubernetes.io/router.middlewares: default-compress-middleware@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - abrepo.com
    - www.abrepo.com
    #
    # NB: tls secret persists without running cert manager / issuer containers
    # containers only used for validation (initial, renewal) of cert.
    #
    # once validated cert is dumped (encoded) into secret.
    # cert is tied to secret, not container lifecycle.
    #
    secretName: abrepo-com-tls
  rules:
    # NB: catches all when no host
    - host: abrepo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abrepo-nginx-service
                port:
                  number: 80
    - host: www.abrepo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abrepo-nginx-service
                port:
                  number: 80
